--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   "dependencies": {
     "gatsby": "^2.30.0",
     "gatsby-plugin-prettier-eslint": "^1.0.4",
+    "gatsby-plugin-sass": "^3.0.0",
     "gatsby-source-filesystem": "^2.9.0",
     "gatsby-transformer-remark": "^2.14.0",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
