--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "gatsby": "^2.30.0",
     "gatsby-plugin-prettier-eslint": "^1.0.4",
     "gatsby-plugin-sass": "^3.0.0",
+    "gatsby-remark-prismjs": "^3.11.0",
     "gatsby-source-filesystem": "^2.9.0",
     "gatsby-transformer-remark": "^2.14.0",
     "node-sass": "^5.0.0",
+    "prismjs": "^1.23.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
