--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^2.4.2",
     "elasticlunr": "^0.9.5",
     "gatsby": "^2.30.0",
+    "gatsby-plugin-manifest": "^2.10.0",
     "gatsby-plugin-prettier-eslint": "^1.0.4",
     "gatsby-plugin-sass": "^3.0.0",
     "gatsby-remark-prismjs": "^3.11.0",
