--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "elasticlunr": "^0.9.5",
     "gatsby": "^2.30.0",
     "gatsby-plugin-manifest": "^2.10.0",
+    "gatsby-plugin-offline": "^3.8.0",
     "gatsby-plugin-prettier-eslint": "^1.0.4",
+    "gatsby-plugin-react-helmet": "^3.8.0",
     "gatsby-plugin-sass": "^3.0.0",
     "gatsby-remark-prismjs": "^3.11.0",
     "gatsby-source-filesystem": "^2.9.0",
@@ -36,7 +38,8 @@
     "node-sass": "^5.0.0",
     "prismjs": "^1.23.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "eslint": "^7.17.0",
